# dapr-in-action-may2025

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  install.sh
solutions/advanced_workshop/04-multi-agent-workflow-dapr-workflows/: README.md  dapr-llm.yaml  dapr-random.yaml  dapr-roundrobin.yaml
solutions/advanced_workshop/04-multi-agent-workflow-dapr-workflows/services/dwarf/: app.py
solutions/advanced_workshop/04-multi-agent-workflow-dapr-workflows/services/eagle/: app.py
solutions/advanced_workshop/04-multi-agent-workflow-dapr-workflows/services/ranger/: app.py
solutions/advanced_workshop/04-multi-agent-workflow-dapr-workflows/services/wizard/: app.py
solutions/advanced_workshop/04-multi-agent-workflow-dapr-workflows/services/workflow-llm/: app.py
solutions/introductory_workshop/: 01_ask_llm.ipynb  02_agent_tools.ipynb  03_creating_an_agent.ipynb
workshop/: dapr_in_action.pptx
workshop/advanced_workshop/04-conversation-api/: README.md  dapr.yaml
workshop/advanced_workshop/04-conversation-api/conversation/: app.py
workshop/advanced_workshop/04-multi-agent-workflow-dapr-workflows/: README.md
workshop/advanced_workshop/05-conversation-api/: README.md
workshop/advanced_workshop/05-multi-agent-workflow-dapr-workflows/: README.md
workshop/advanced_workshop/06-document-agent-chainlit/: README.md  app.py
workshop/introductory_workshop/: 01_ask_llm.ipynb  02_agent_tools.ipynb  03_creating_an_agent.ipynb  helper_secrets.py
(+5 files in other folders)
